Add SBT_OPTS to avoid timeouts